--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -75,7 +75,8 @@ jobs:
             cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DWARNINGS=ON -DWERROR=ON  \
                      -DBUILD_TESTS=ON -DINSTALL_SUBDIR_SHARE=share/supertux2   \
                      -DCMAKE_INSTALL_MESSAGE=NEVER -DCMAKE_INSTALL_PREFIX=/usr \
-                     -DINSTALL_SUBDIR_BIN=bin # -DGLBINDING_ENABLED=$GLBINDING
+                     -DINSTALL_SUBDIR_BIN=bin # -DGLBINDING_ENABLED=$GLBINDING \
+                     -DCMAKE_POLICY_VERSION_MINIMUM=3.5
                                             # TODO: Uncomment whenever possible
             make -j3 VERBOSE=1
             make install DESTDIR="/tmp/supertux" VERBOSE=1
