--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -94,7 +94,8 @@ jobs:
                    -DWARNINGS=ON -DWERROR=ON -DGLBINDING_ENABLED=$GLBINDING    \
                    -DENABLE_DISCORD=ON -DCMAKE_INSTALL_MESSAGE=NEVER           \
                    -DCMAKE_INSTALL_PREFIX=/usr -DINSTALL_SUBDIR_BIN=bin        \
-                   -DINSTALL_SUBDIR_SHARE=share/supertux2
+                   -DINSTALL_SUBDIR_SHARE=share/supertux2                      \
+                   -DCMAKE_POLICY_VERSION_MINIMUM=3.5
 
       - name: Build and install
         working-directory: build
