Fix OS X builds by preventing regeneration without arguments (#3245)
* Fix OS X builds by preventing regeneration without arguments

* Specify CMAKE_POLICY_VERSION_MINIMUM as an environment variable

* Add environment variables to build step as well

* Mark VORBIS_INCLUDE_DIR as a system include

* Mark VORBIS_INCLUDE_DIR as SYSTEM PRIVATE elsewhere

* Revert "Mark VORBIS_INCLUDE_DIR as SYSTEM PRIVATE elsewhere"

This reverts commit e68132f67e0f10126a9dc389e907dc4de4bb1b5a.

* Revert changes to ProvideOggVorbis.cmake and disable WERROR on MacOS builds

* Add note about disabling -Werror on MacOS CIs

[ci skip]

--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -155,6 +155,7 @@ jobs:
           # FIXME: GoogleTest isn't detected by CMake on Ubuntu 18.04
           # (also check the step that invokes the tests with ./test_supertux2)
           TESTS: ${{ matrix.os == 'ubuntu-22.04' }}
+          CMAKE_POLICY_VERSION_MINIMUM: 3.5
         run: |
           cmake --version
           $CXX --version
@@ -164,11 +165,12 @@ jobs:
                    -DWARNINGS=ON -DWERROR=ON -DGLBINDING_ENABLED=$GLBINDING    \
                    -DCMAKE_INSTALL_MESSAGE=NEVER -DCMAKE_INSTALL_PREFIX=/usr   \
                    -DBUILD_DOCUMENTATION=$MAKE_DOCS -DINSTALL_SUBDIR_BIN=bin   \
-                   -DINSTALL_SUBDIR_SHARE=share/supertux2 -DENABLE_DISCORD=ON. \
-                   -DCMAKE_POLICY_VERSION_MINIMUM=3.5
+                   -DINSTALL_SUBDIR_SHARE=share/supertux2 -DENABLE_DISCORD=ON.
 
       - name: Build and install
         working-directory: build
+        env:
+          CMAKE_POLICY_VERSION_MINIMUM: 3.5
         run: |
           make -j3 VERBOSE=1
           make install DESTDIR="/tmp/supertux" VERBOSE=1
