--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -84,20 +84,25 @@ jobs:
         env:
           BUILD_TYPE: ${{ matrix.build_type }}
           GLBINDING: ${{ matrix.glbinding }}
+          CMAKE_POLICY_VERSION_MINIMUM: 3.5
         run: |
           cmake --version
           $CXX --version
           mkdir "build"
           cd "build"
           # TODO add -DGLBINDING_ENABLED=$USE_GLBINDING
+          # NOTE: The `WERROR` flag is set to OFF in order to work around issues
+          #       where said flag applied to system includes as well, causing the
+          #       builds to fail. This issue requires further investigation!
           cmake .. -DCMAKE_BUILD_TYPE=$BUILD_TYPE $ARCH -DBUILD_TESTS=ON       \
-                   -DWARNINGS=ON -DWERROR=ON -DGLBINDING_ENABLED=$GLBINDING    \
+                   -DWARNINGS=ON -DWERROR=OFF -DGLBINDING_ENABLED=$GLBINDING    \
                    -DENABLE_DISCORD=ON -DCMAKE_INSTALL_MESSAGE=NEVER           \
                    -DCMAKE_INSTALL_PREFIX=/usr -DINSTALL_SUBDIR_BIN=bin        \
-                   -DINSTALL_SUBDIR_SHARE=share/supertux2                      \
-                   -DCMAKE_POLICY_VERSION_MINIMUM=3.5
+                   -DINSTALL_SUBDIR_SHARE=share/supertux2
 
       - name: Build and install
+        env:
+          CMAKE_POLICY_VERSION_MINIMUM: 3.5
         working-directory: build
         run: |
           make -j3 VERBOSE=1
