--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ build.*/
 **/CMakeCache.txt
 supertux2
 
+# Installed vcpkg packages
+vcpkg_installed/
+
 # Ubuntu Touch (clickable) build files
 .clickable/
 
