--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -61,18 +61,6 @@ jobs:
           path: /usr/local/share/vcpkg/installed
           key: wasm-dependencies-${{ hashFiles('.github/workflows/wasm.yml') }}
 
-      - name: Install dependencies
-        if: steps.cache-dependencies.outputs.cache-hit != 'true'
-        run: |
-          source ~/emsdk/emsdk_env.sh
-          vcpkg install libpng:wasm32-emscripten
-          vcpkg install glm:wasm32-emscripten
-          vcpkg install zlib:wasm32-emscripten
-          vcpkg install fmt:wasm32-emscripten
-          vcpkg install physfs:wasm32-emscripten
-          vcpkg install libraqm:wasm32-emscripten
-          vcpkg install freetype:wasm32-emscripten
-
       - name: Configure build
         env:
           BUILD_TYPE: ${{ matrix.build_type }}
@@ -84,7 +72,10 @@ jobs:
           emcmake cmake .. -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DWARNINGS=ON \
                            -DCMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake \
                            -DVCPKG_CHAINLOAD_TOOLCHAIN_FILE=~/emsdk/upstream/emscripten/cmake/Modules/Platform/Emscripten.cmake \
-                           -DVCPKG_TARGET_TRIPLET=wasm32-emscripten -DCMAKE_POLICY_VERSION_MINIMUM=3.5
+                           -DVCPKG_TARGET_TRIPLET=wasm32-emscripten -DCMAKE_POLICY_VERSION_MINIMUM=3.5 `
+                           -DVCPKG_MANIFEST_FEATURES=core
+
+          ls
 
       - name: Sync data folder
         working-directory: build
