--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -339,7 +339,7 @@ configure_file(config.h.in ${CMAKE_BINARY_DIR}/config.h)
 
 ## Build tests
 # TODO Finish porting tests to CTest
-set(BUILD_TESTING OFF)
+set(BUILD_TESTING OFF CACHE BOOL Enable tests)
 if(BUILD_TESTING)
   #include(SuperTux/BuildTests)
   set(CMAKE_CTEST_ARGUMENTS "--output-on-failure")
