chore: remove `CMAKE_POLICY_VERSION_MINIMUM: 3.5` refs
Signed-off-by: Rui Chen <rui@chenrui.dev>

--- a/.github/workflows/scripting.yml
+++ b/.github/workflows/scripting.yml
@@ -57,7 +57,7 @@ jobs:
           cmake --version
           mkdir build
           cd build
-          cmake .. -DBUILD_DOCUMENTATION_WITH_SCRIPTING=ON -DCMAKE_POLICY_VERSION_MINIMUM=3.5
+          cmake .. -DBUILD_DOCUMENTATION_WITH_SCRIPTING=ON
           make
 
       - name: Generate scripting reference
