--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -58,7 +58,7 @@ jobs:
           mkdir build
           cd build
           # TODO: Re-add -DWERROR=ON when warnings will be fixed
-          emcmake cmake -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DWARNINGS=ON -DCMAKE_POLICY_VERSION_MINIMUM=3.5 ..
+          emcmake cmake -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DWARNINGS=ON ..
 
       - name: Sync data folder
         working-directory: build
