Try remove testing on linux

--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -189,7 +189,8 @@ jobs:
                      }) `
                      -DBUILD_DOCUMENTATION="$(if ($Env:MAKE_DOCS -eq "true") {"ON"} else {"OFF"})" `
                      -DCMAKE_CXX_FLAGS="$(if ($Env:32BIT -eq "true") {"-m32"})" `
-                     -DCMAKE_C_FLAGS="$(if ($Env:32BIT -eq "true") {"-m32"})"
+                     -DCMAKE_C_FLAGS="$(if ($Env:32BIT -eq "true") {"-m32"})" `
+                     -DBUILD_TESTING=OFF
 
       - name: Build and install
         working-directory: build
