Fix cmake compat issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@
 
 # Stop CMake from whining about 3.5 or future versions
 set(CMAKE_WARN_DEPRECATED OFF)
-set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
+set(CMAKE_POLICY_VERSION_MINIMUM 3.5 CACHE STRING "")
 
 cmake_minimum_required(VERSION 3.22)
 
